--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "bcrypt": "^5.1.0",
     "config": "^3.3.8",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.8.0",
+    "path": "^0.12.7",
+    "validator": "^13.7.0"
   }
 }
