--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "path": "^0.12.7",
+    "stripe": "^11.1.0",
     "validator": "^13.7.0"
   },
   "proxy": "http://localhost:4000"
