--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
     "stripe": "^11.1.0",
     "validator": "^13.7.0"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "https://red-gorgeous-bandicoot.cyclic.app"
 }
